fix space wrap layout

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,12 @@ html,body,app-root,.site{
 }
 main{
     flex:1;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-between;
+    align-items:space-between;
 }
 
 header{
@@ -19,4 +25,14 @@ header{
 
 footer{
     background-color: blue;
+}
+main div{
+    width: 200px;
+    height: 200px;
+    background-color: red;
+    margin: 10px;
+}
+.box{
+    width: 300px;
+    height: 300px;
 }
